src/test/deca/context/invalid/class/def-method-invalid.deca
// Programme testant de définir une méthode s'appelant comme une super classe

class A {}

class B extends A

class C extends B {
    void A() {}
}